--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/libs/jquery.min.js"%3E%3C/script%3E'))</script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
   <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
-<link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 
   
   <script type="text/javascript">
@@ -61,7 +61,7 @@
   
 </ul>
   
-<form action="http://google.com/search" method="get">
+<form action="//google.com/search" method="get">
   <fieldset role="search">
     <input type="hidden" name="q" value="site:flavienlaurent.com" />
     <input class="search" type="text" name="q" results="0" placeholder="Search"/>
@@ -72,14 +72,14 @@
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives">Archives</a></li>
 	
-	<li><a href="http://github.com/flavienlaurent" title="Github Profile" target="_blank"></i>Github</a></li>
+	<li><a href="https://github.com/flavienlaurent" title="Github Profile" target="_blank"></i>Github</a></li>
 	
 	
 	
-	<li><a href="http://twitter.com/flavienlaurent" title="Twitter Profile" target="_blank">Twitter</a></li>
+	<li><a href="https://twitter.com/flavienlaurent" title="Twitter Profile" target="_blank">Twitter</a></li>
 	
 	
-	<li><a href="http://plus.google.com/103561222519914490723" title="Google+ Profile" target="_blank">G+</a></li>
+	<li><a href="https://plus.google.com/103561222519914490723" title="Google+ Profile" target="_blank">G+</a></li>
 	
 	
 	
