HTTPS for google profile button too

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ So in this post, I&rsquo;m going to tell you more about this useful feature.</p>
 <section class="googleplus">
   <h1>
     <a href="https://plus.google.com/103561222519914490723?rel=author">
-      <img src="http://www.google.com/images/icons/ui/gprofile_button-32.png" width="32" height="32">
+      <img src="//www.google.com/images/icons/ui/gprofile_button-32.png" width="32" height="32">
       Google+
     </a>
   </h1>
